--- a/package.json
+++ b/package.json
@@ -2,16 +2,27 @@
   "name": "ecommerce",
   "version": "1.0.0",
   "main": "server.js",
+  "type": "module",
   "scripts": {
     "start": "node --watch server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "client": "npm run dev --prefix ./client",
+    "dev": "concurrently \"npm start\" \"npm run client\""
   },
   "keywords": [],
   "author": "Rishikesh Mishra",
   "license": "ISC",
   "description": "ecommerce rest api",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "colors": "^1.4.0",
-    "express": "^4.21.2"
+    "concurrently": "^9.1.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.12.1",
+    "morgan": "^1.10.0",
+    "slugify": "^1.6.6"
   }
 }
